--- a/style.css
+++ b/style.css
@@ -44,7 +44,8 @@
     height: 5vh;
     width: 4vw;
     border-radius: 20px;
-    
+    border: 0;
+    cursor: pointer;
 }
 button span{
     display: block;
